syntax = "proto3";

package go.micro.srv.elastic;

service Elastic {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc CreateIndexWithSettings(CreateIndexWithSettingsRequest) returns (CreateIndexWithSettingsResponse) {}
  rpc PutMappingFromJSON(PutMappingFromJSONRequest) returns (PutMappingFromJSONRequest) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
}

message DocRef {
  string index = 1;
  string type = 2;
	string id = 3;
}

message CreateRequest {
  string index = 1;
  string type = 2;
  string id = 3;
  string data = 4;
}

message CreateResponse {

}

message BulkCreateRequest {
  string index = 1;
  string type = 2;
  string id = 3;
  string data = 4;
}

message BulkCreateResponse {

}

message ReadRequest {
  string index = 1;
  string type = 2;
  string id = 3;
}

message ReadResponse {
  string result = 1;
}

message UpdateRequest {
  string index = 1;
  string type = 2;
	string id = 3;
	string data = 4;
}

message UpdateResponse {

}

message DeleteRequest {
  string index = 1;
  string type = 2;
	string id = 3;
}

message DeleteResponse {

}

message CreateIndexWithSettingsRequest {
  string index = 1;
  string settings = 2;
}

message CreateIndexWithSettingsResponse {

}

message PutMappingFromJSONRequest {
  string index = 1;
  string type = 2;
  string mapping = 3;
}

message PutMappingFromJSONResponse {

}

message StatusRequest {

}

message StatusResponse {
  string status = 1;
}
